src/objects/Contact__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Title__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_2__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>